Updated features or fixed bugs

--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,8 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+  <!-- index.html -->
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
 </body>
 </html>
